# cute-video-player

./: .gitmodules  CMakeLists.txt  README.md  watch
src/: CMakeLists.txt  cute_video.c  cute_video.glsl  cute_video.h  cute_video_shd.h  main.c
